<?xml version="1.0" encoding="utf-8"?>
<!--
    The Phoenix Hospitality Management System
    Launcher App Source Code
    Apps Activity Portrait Layout Definition File
    Copyright (c) 2020 By Troy Marker Enterprises
    All Rights Under Copyright Reserved

    The code in this file was created for use with the Phoenix Hospitality Management System (PHMS).
    Use of this code outside the PHMS is strictly prohibited.
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Activity"
    android:orientation="vertical">
    <LinearLayout
        style="@style/HeaderWrapper">
        <LinearLayout
            style="@style/Header">
            <TextView
                android:id="@+id/tvLoggedUsername"
                style="@style/UserInformation"
                android:text="@string/current_user" />
            <TextView
                android:id="@+id/tvAccessGrade"
                style="@style/UserInformation"
                android:text="@string/current_grade" />
            <TextView
                android:id="@+id/tvDepartment"
                style="@style/UserInformation"
                android:text="@string/current_department" />
        </LinearLayout>
        <Button
            android:id="@+id/btLogoff"
            style="@style/Logout"
            android:text="@string/logoff" />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvApps"
        style="@style/AppList" />
</LinearLayout>